--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <% if flash[:notice] %>
+      <p><%= flash[:notice] %></p>
+    <% end%>
+    <% if flash[:alert] %>
+      <p><%= flash[:alert] %></P>
+    <% end%>
     <%= yield %>
   </body>
 </html>
